--- a/traveladvisor/main.html
+++ b/traveladvisor/main.html
@@ -112,11 +112,11 @@
             <div>
     	    	<address id="address">
 	            	<h4>About the Author</h4>
-                	Kunal Bandooni
+                	Soumili Tapadar
                 	<br>
-                	<a href="mailto:kbandooni1@gmail.com">kbandooni1@gmail.com</a>
+                	<a href="mailto:soumili1818@gmail.com">mail me</a>
                 	<br>
-                	LinkTree: <a href="https://linktr.ee/kbandooni1">CLICK HERE</a>
+                	LinkTree: <a href="https://linktr.ee/Soumili1818">CLICK HERE</a>
         		</address>
         	</div>
 		</footer>
